// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabSwitcher expect to render first tab 1`] = `
<Component
  eventKey={0}
>
  First Tab
</Component>
`;

exports[`TabSwitcher expect to render second tab 1`] = `
<Component
  eventKey={1}
>
  Second Tab
</Component>
`;
